@@ -1,2 +1,3 @@
-EBUILD q4wine-9999.ebuild 799 RMD160 2494379fd014ec957b275c7d86bf2ec95d475597 SHA1 b51a1fcac9d5b31bdc7ed73de92b63d57dbd1cf6 SHA256 5395fe71181e6e196d663deec5ea95694933e7c50dba3de35a3c63dc45c4121b
-MISC ChangeLog 2077 RMD160 45c700aedbc894857599bf792f347dd50b61ab60 SHA1 9f0b2df425d68be12de288a68f6bf12de0658dbe SHA256 da782b0b5cdad148df6fcec478f620bf66d2d3bced500f2586149433c6d8f16a
+EBUILD q4wine-9999.ebuild 1108 RMD160 bb89211496cfa6670d683a1f637a9746e06c6d1b SHA1 454b1d298dc024b109a5499e3ac8d6c104175a77 SHA256 f12c953211fb8bd85a58ceaf5d616cde65825cb75d47a63c6690247cb2873562
+MISC ChangeLog 2215 RMD160 c2726e125fb2f906264a1f471df6c21bf06821d6 SHA1 df83de3b1ea16f25a2a698640925b249ff6940b7 SHA256 2b90af2cb159244f96d77dfb197ef63f3e5a212953c334b87648c051fdeb52f5
+MISC metadata.xml 548 RMD160 df506fc9b9bafc5a2fba22057cc3f5f7e8ad0ebd SHA1 b6b46b3e7bc89e77e954a56e80dc2a4a1d175c61 SHA256 d069d3db7c792717c832dd6d7f2f82cf740c6cab15fe278d2951ee45c520d098
