@@ -4,6 +4,10 @@
 
   Dropped cmake from RDEPEND
 
+  06 Oct 2009; Markos Chandras <hwoarang@gentoo.org> q4wine-9999.ebuild,
+  +metadata.xml:
+  New -9999 ebuild according to recent changes
+
   09 May 2009; Markos Chandras <hwoarang@gentoo.org>
   -q4wine-0.112-r1.ebuild:
   On tree
